<resources>
    <string name="app_name">Khalti</string>

    <string name="empty">…</string>
    <string name="blank"> </string>
    <string name="action_search">Search</string>
    <string name="please_wait">Please wait</string>
    <string name="generic_error">Something went wrong</string>
    <string name="code_sms_info">Khalti has sent a confirmation code in your Khalti registered number. Enter the confirmation code below</string>
    <string name="pin_sms_info">Enter Khalti Pin for user verification. In case you have not set your PIN goto \'Settings\' option in Khalti App</string>
    <string name="pin_error">Your third party transactions has been locked indefinitely. Please reset your Khalti PIN to unlock third party transactions.&lt;br /&gt;&lt;br /&gt;Would you like to reset your Khalti PIN?</string>
    <string name="sms_info">Enter the PIN below</string>
    <string name="slogan">पैसा को नयाँ ठेगाना</string>
    <string name="title">Choose your payment method</string>
    <string name="forgot_pin_message">Forgot your Khalti PIN?</string>

    <!--Component Button-->
    <string name="pay">PAY</string>

    <!--Network Error-->
    <string name="network_error_body">No Internet detected.\nPlease check your internet connection.</string>

    <!--Data fetch error-->
    <string name="fetch_error">Some information could not be fetched. Please try again.</string>
    <string name="try_again">Try Again</string>

    <!--Info Dialog-->
    <string name="got_it">Got It</string>

    <!--Interactive Dialog-->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!--CheckOut Activity-->
    <string name="check_out_title">One app payment solution</string>
    <string name="eBanking">E-Banking</string>
    <string name="wallet">Wallet</string>
    <string name="card">Debit/Credit Card</string>

    <!--Form-->
    <string name="mobile_hint">Khalti Mobile Number</string>
    <string name="contact_hint">Mobile Number</string>
    <string name="code_hint">Confirmation Code</string>
    <string name="pin_hint">Khalti PIN</string>
    <string name="select_bank">Please select your Bank</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="set_pin">Set Khalti PIN</string>
    <string name="attempts_remaining">Attempts Remaining</string>

    <!--Wallet-->
    <string name="init_payment">Initiating payment</string>
    <string name="confirming_payment">Confirming payment</string>
    <string name="pin_not_set">You have not enabled your transaction PIN.</string>
    <string name="pin_not_set_continue">Would you like to enable it?</string>
    <string name="khalti_not_found">Khalti is not installed in your device</string>
    <string name="set_pin_in_browser">Do you want to set your PIN using your browser?</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>

    <!--E Banking-->
    <string name="loading_bank">Loading Bank</string>
    <string name="search_bank">Search Bank…</string>
    <string name="no_banks">No Banks</string>

    <!--Card-->
    <string name="we_accept">We accept</string>
</resources>
