<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:khalti="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/doubleBottomMargin"
            android:text="@string/empty"
            android:textColor="@color/black"
            android:textSize="@dimen/title"
            app:fontFamily="@font/roboto_medium" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tvBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/head"
            app:fontFamily="@font/roboto" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:gravity="end|center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/cardPadding">

        <khalti.carbonX.widget.FrameLayout
            android:id="@+id/flNegativeAction"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginEnd="@dimen/cardPadding"
            android:layout_marginRight="@dimen/cardPadding"
            android:visibility="gone"
            khalti:carbonX_cornerRadius="2dp"
            khalti:carbonX_rippleColor="@color/defaultRipple">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvNegative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingLeft="@dimen/globalPadding"
                android:paddingRight="@dimen/globalPadding"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:textColor="@color/khaltiAccent"
                android:textSize="@dimen/body"
                app:fontFamily="@font/roboto" />
        </khalti.carbonX.widget.FrameLayout>

        <khalti.carbonX.widget.FrameLayout
            android:id="@+id/flPositiveAction"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:minWidth="100dp"
            khalti:carbonX_cornerRadius="2dp"
            khalti:carbonX_rippleColor="@color/defaultRipple">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvPositive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingLeft="@dimen/globalPadding"
                android:paddingRight="@dimen/globalPadding"
                android:text="@string/ok"
                android:textAllCaps="true"
                android:textColor="@color/khaltiAccent"
                android:textSize="@dimen/body"
                app:fontFamily="@font/roboto_medium" />
        </khalti.carbonX.widget.FrameLayout>
    </LinearLayout>
</LinearLayout>

